# nspell-gpt

./: CMakeLists.txt  LICENSE  README.md  make.sh  nspell-gpt  nspell-gpt.1
.github/ISSUE_TEMPLATE/: config.yml
